# al-pj

./: .gitignore  LICENSE  README.md  docker-compose.yml  manage.py  nginx.conf  package.json  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/: deploy.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/backend/: __init__.py  asgi.py  settings.py  settings_test.py  urls.py
backend/core/: admin.py  consumers.py  dependencies.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
backend/core/admin/: __init__.py  album.py  bucketpoint.py  message.py  photo.py
backend/core/exceptions/: __init__.py  exceptions.py  handler.py
backend/core/interface/: aws.py  photo_saver_repository.py
backend/core/migrations/: 0001_initial.py  0002_bucketpoint.py  0003_message_status.py  0004_remove_message_email_remove_message_name.py  0005_album_photo.py  0006_alter_album_description_and_more.py
backend/core/models/: __init__.py  album.py  bucketpoint.py  message.py  photo.py
backend/core/serializers/: __init__.py  album.py  bucketpoint.py  message.py  photo.py  user.py
backend/core/services/: __init__.py  album_service.py  bucketpoints_service.py  message_service.py  photo_service.py  user_service.py
backend/core/tests/: conftest.py  test_api.py  test_serializers.py
backend/core/tests/exceptions/: test_handler.py
backend/core/tests/interface/: test_aws.py  test_photo_saver_repository.py
backend/core/tests/models/: test_models.py
backend/core/tests/serializers/: test_album.py  test_bucketpoint.py  test_message.py  test_photo.py  test_user.py
backend/core/tests/services/: test_album_service.py  test_bucketpoints_service.py  test_message_service.py  test_photo_service.py  test_user_service.py
backend/core/tests/utils/: test_utils.py
backend/core/tests/views/: test_albums.py  test_bucketpoints.py  test_messages.py  test_paginated_messages.py  test_photos.py  test_users.py
backend/core/tests/websocket/: test_consumers.py  test_consumers_integration.py  test_utils.py  test_websocket_utils.py
backend/core/views/: __init__.py  albums.py  bucketpoints.py  messages.py  photos.py  users.py
backend/core/websocket/: consumers.py  messages.py  utils.py
backend/docs/: WEBSOCKET.md
backend/scripts/: generate_pdf_report.py
frontend/: .env.example  Dockerfile  eslint.config.cjs  eslint.config.mjs  package-lock.json  package.json  prettier.config.cjs  tsconfig.json
frontend/.husky/: pre-commit  pre-push
frontend/public/: index.html
frontend/src/: App.test.jsx  App.tsx  custom.d.ts  index.css  index.js
frontend/src/components/: AddAlbumButton.tsx  AddPhotoButton.tsx  AlbumCard.tsx  AlbumManagement.tsx  AlbumsGrid.tsx  BridgeDisplay.tsx  BucketPointsDisplay.tsx  BucketPointsInput.tsx  ConnectionStatusIndicator.tsx  DisplayMessages.tsx  Footer.test.tsx  Footer.tsx  Header.tsx  Input.tsx  OptionsButton.tsx  PageWrapper.tsx  PhotoCard.tsx  PhotosGrid.tsx  PresenceIndicator.tsx  UpdateAlbumModal.tsx
frontend/src/contexts/: AuthContext.tsx  WebSocketProvider.tsx
frontend/src/hooks/: createOptionnalContext.ts  useAuth.ts  usePhotosWithWebSocket.ts
frontend/src/pages/: Albums.tsx  Bridge.tsx  BucketPoints.tsx  Home.tsx  Login.tsx  Photos.tsx
frontend/src/queries/: albums.tsx  auth.tsx  bucketpoints.tsx  messages.tsx  photos.tsx  presence.tsx
frontend/src/services/: WebSocketClient.ts
frontend/src/themes/: Default.ts
frontend/src/types/: album.ts  bucketspoints.ts  messages.ts  photo.ts  user.ts  websocket-interfaces.ts  websocket-messages.ts  websockets.ts
frontend/src/utils/: constants.ts  (+2 more)
