[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["leo <leopold@lchappuis.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
django = "^5.2"
pymysql = "^1.1.1"
channels = "^4.2.2"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"
daphne = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
